revolutionary_refactoring: fixed name route logout all. fix method hashing password
